Float removed to fix the misalignment

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -768,7 +768,6 @@ header td {
 }
 
 #before, #after {
-  float: left;
   width: 226px;
 }
 
